Fix header z-index

--- a/css/layout.styl
+++ b/css/layout.styl
@@ -1,10 +1,6 @@
 body
   margin: 0
 
-.panoptes-main-container
-  position: relative
-  z-index: 0
-
 .panoptes-main
   display: flex
   flex: 1 0 auto
