--- a/css/main-header.styl
+++ b/css/main-header.styl
@@ -1,7 +1,9 @@
 .main-header
   font-size: 10px
   line-height: 20px
-  z-index: 100
+
+  &:hover
+    z-index: 1
 
   .on-home-page &
     position: absolute
@@ -185,4 +187,3 @@
           a
             @extends .main-nav-item
             text-decoration: none
-
